...
}

// Composable function that displays the title screen text and an accompanying image
@Composable
fun TitleScreen() {
  Box(
      modifier = Modifier.padding(16.dp).fillMaxWidth().testTag("TitleScreen"),
  ) {
    Text(
        text = "Find Your Seeker",
        fontSize = 30.sp,
        fontFamily = FontFamily(Font(R.font.ruwudu)),
        fontWeight = FontWeight(400),
...
  // For the moment we chose to have 3 filters, it can ameliorated later
  // TODO near to me locate in function of user location
  val filters = listOf("Service", "Near To Me", "Due Time")

  // LazyRow containing filters
  LazyRow(
      modifier = Modifier.testTag("FilterBar"),
      horizontalArrangement = Arrangement.spacedBy(10.dp, Alignment.Start),
      verticalAlignment = Alignment.Top,
  ) {
    items(filters.size) { idx ->
      val filter = filters[idx]
      // Calling special chip when it's Service to have a dropdown menu with different possible
...
  val selectedFilters = remember { mutableStateOf(setOf<String>()) }
  var selectedService by remember { mutableStateOf("Service") }
  serviceRequestViewModel.getServiceRequests()

  Log.e("ListRequestsFeed", "${selectedFilters.value}")
  Scaffold(
      modifier = Modifier.fillMaxSize().testTag("ListRequestsScreen"),
      bottomBar = {
        BottomNavigationMenu(
            onTabSelect = { route -> navigationActions.navigateTo(route) },
            tabList = LIST_TOP_LEVEL_DESTINATION_PROVIDER,
            selectedItem = Route.REQUESTS_FEED)
      },
...
