...
val ENDED_color = Color(0xFF02F135)
val CANCELLED_color = Color(0xFFE50000)
val ARCHIVED_color = Color(0xFF000000)

val Plumber = Color(0xFF2D75BB)
val Electrician = Color(0xFFf9d023)
val Tutor = Color(0xFF5ECC29)
val EventPlanner = Color(0xFFfd5e95)
val Writer = Color(0xFFd64c45)
val Cleaner = Color(0xFF78828a)
val Carpenter = Color(0xFFd36c4f)
val Photographer = Color(0xFF414b82)
val PersonalTrainer = Color(0xFFfb7c44)
...
